# IMGV

./: CMakeLists.txt  IMGV.pro  README.md  config.lua  imgv.desktop  imgv.pro  resources.qrc
src/: ;  AboutDialog.cpp  AboutDialog.hpp  HoverLabel.cpp  HoverLabel.hpp  ImagePropertiesDialog.cpp  ImagePropertiesDialog.hpp  ImageWidget.cpp  ImageWidget.hpp  ManageSessionsDialog.cpp  ManageSessionsDialog.hpp  ManageTagDialog.cpp  ManageTagDialog.hpp  Minimap.cpp  Minimap.hpp  MinimapRect.cpp  MinimapRect.hpp  MovieItem.hpp  NoteWidget.cpp  NoteWidget.hpp  PixAnalyser.cpp  PixAnalyser.hpp  StatusBar.cpp  StatusBar.hpp  Thumbnail.cpp  Thumbnail.hpp  ThumbnailFilterProxy.hpp  ThumbnailModel.cpp  ThumbnailModel.hpp  ThumbnailTools.cpp  ThumbnailTools.hpp  ThumbnailView.cpp  ThumbnailView.hpp  ThumbnailViewStyledItemDelegate.hpp  ThumbnailWidget.cpp  ThumbnailWidget.hpp  exif.cpp  exif.hpp  imgv.cpp  imgv.hpp  (+3 more)
src/qmarkdowntextedit/: markdownhighlighter.cpp  markdownhighlighter.h
src/sol/: sol.hpp
